# GNNs-in-ComputerNetworks

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: caida_as_relationships_serial2.ipynb  tmp-010.ipynb
